compiler/tests/should-fail/UnknownProtocol.via
/* UndefinedNameError */

fun main() {
    val x: int@Unknown() = 0;
}
